#113 Allow updating only specific bill fields
